--- a/assets/styles/layouts/_footer.scss
+++ b/assets/styles/layouts/_footer.scss
@@ -16,3 +16,9 @@ footer {
 header.banner .cta {
 	margin-bottom: 10px;
 }
+
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+	.uk-panel-box-primary {
+	    background: #ee6800;
+	}
+}
