fix for other orange crush problems on i.e.

--- a/iefix.css
+++ b/iefix.css
@@ -1,3 +1,8 @@
 .uk-panel-box-primary {
     background: #ee6800;
 }
+
+.nav li, .pagenav li, .uk-navbar-nav li, footer {
+    background: #ee6800;
+    color: #f7f7f7;
+}
