--- a/assets/styles/layouts/_footer.scss
+++ b/assets/styles/layouts/_footer.scss
@@ -21,4 +21,8 @@ header.banner .cta {
 	.uk-panel-box-primary {
 	    background: #ee6800;
 	}
+	.nav li, .pagenav li, .uk-navbar-nav li, footer {
+   		background: #ee6800;
+   		color: #f7f7f7;
+	}
 }
