fix for putting the gp/admin/staff background back to grey

--- a/assets/styles/layouts/_footer.scss
+++ b/assets/styles/layouts/_footer.scss
@@ -25,4 +25,7 @@ header.banner .cta {
    		background: #ee6800;
    		color: #f7f7f7;
 	}
+	.uk-navbar-flip>li {
+    	background-color: #f3f3f3;
+	}
 }
