--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -25,4 +25,4 @@
 @import "layouts/pages";
 @import "layouts/posts";
 @import "layouts/tinymce";
-@import "common/tpp-custom";
+@import "common/media-query";
