--- a/iefix.css
+++ b/iefix.css
@@ -9,6 +9,7 @@
 
 .uk-panel-box-primary {
     background: #ee6800;
+    background-image:url(dist/images/textures/diagonal-noise.png);
 }
 
 .nav li, .pagenav li, .uk-navbar-nav li, footer {
