--- a/iefix.css
+++ b/iefix.css
@@ -14,6 +14,7 @@
 
 .nav li, .pagenav li, .uk-navbar-nav li, footer {
     background: #ee6800;
+    background-image:url(dist/images/textures/ie-diagonal-noise.png);
     color: #f7f7f7;
 }
 
