--- a/assets/styles/layouts/_footer.scss
+++ b/assets/styles/layouts/_footer.scss
@@ -14,14 +14,13 @@ footer {
 }
 
 
-	
 @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
 	.uk-panel-box-primary {
-	    background: #ee6800;
+	    background-color: #ee6800;
 	    background-image:url(dist/images/textures/ie-diagonal-noise.png);
 	}
 	.nav li, .pagenav li, .uk-navbar-nav li, footer {
-   		background: #ee6800;
+   		background-color: #ee6800;
    	    background-image:url(dist/images/textures/ie-diagonal-noise.png);
    		color: #f7f7f7;
 	}
