fix paths for background images in ie.css

--- a/assets/styles/ie/_ie.scss
+++ b/assets/styles/ie/_ie.scss
@@ -2,11 +2,11 @@
     /* IE10 and higher CSS styles go here */
     .uk-panel-box-primary {
         background-color: #ee6800;
-        background-image:url(dist/images/textures/ie-diagonal-noise.png);
+        background-image:url(../images/textures/ie-diagonal-noise.png);
     }
     .nav li, .pagenav li, .uk-navbar-nav li, footer {
         background-color: #ee6800;
-        background-image:url(dist/images/textures/ie-diagonal-noise.png);
+        background-image:url(../images/textures/ie-diagonal-noise.png);
         color: #f7f7f7;
     }
     .uk-navbar-flip>li {
