--- a/assets/styles/ie/_ie.scss
+++ b/assets/styles/ie/_ie.scss
@@ -9,7 +9,7 @@
         background-image:url(../images/textures/ie-diagonal-noise.png);
         color: #f7f7f7;
     }
-    .uk-navbar-nav li {
+    #menu-right-1 li {
         background-image:url(../images/textures/diagonal-noise.png);
     }
     .uk-navbar-flip>li {
