--- a/assets/styles/common/_nathan-global.scss
+++ b/assets/styles/common/_nathan-global.scss
@@ -1,17 +1,14 @@
-/*@mixin hook-panel-box( $background: $panel-box-background-primary) {
-background: $background;
 
-}*/
 
 .uk-navbar-flip {
 	a {
-	color: $dark-neutral!important;
+	color: $neutral-dark!important;
 	}
 }
 
 .uk-navbar-flip>li>a:active,
 .uk-navbar-flip>li>a:hover {
-	color: $white!important;
+	color: text-light!important;
 }
 
 .wrap .content .main {
@@ -21,22 +18,10 @@ background: $background;
 // HEADERS 
 
 h4 a {
-	color: $dark-neutral;
+	color: $neutral-dark;
 }
 
 
-.uk-panel-box-primary {
-	background-blend-mode: multiply;
-}
-.uk-panel-box {
-	background: $panel-box-background;
-	background-blend-mode: multiply;
-}
-
-.uk-panel-box-primary {
-background: $panel-box-background-primary;
-background-blend-mode: multiply;
-}
 
 // BUTTONS 
 
@@ -56,7 +41,7 @@ background-blend-mode: multiply;
 		
 	}
 	li a {
-		color: $white;
+		color: text-light;
 		padding: 3px 6px;
 		&:hover {
 		@extend %blue-crush;
@@ -68,33 +53,39 @@ background-blend-mode: multiply;
 	@extend %panel-primary-list;	
 }
 
-.uk-panel-box li {
 
-}
+// FOOTER
 
-footer section.widget {
-	background: none;
-}
+@mixin footer-colours(){
+	 @include block-colours($orange-crush, $text-light);
+	 	}
+
+
 
 footer {
-	@extend %orange-crush;
-	@extend %panel-primary-list;
-	h3 {
-		color: $white;
+	@include footer-colours;
+	h3, a {
+		color: $text-light;
 	}
+	.strapline {
+		text-align: center;
+		font-size: 1.8em;
+		@include block-colours($dark-orange, $text-light);
+		}
+		
+	section.widget {
+		background: none;
+	}
+	
 }
 
 
-footer .strapline {
-	text-align: center;
-	font-size: 1.8em;
-}
 
 .credits {
 	text-align: center;
 	display: block;
 	a {
-	color:  $white;
+	color:  text-light;
 }
 }
  
