--- a/assets/styles/common/_nathan-global.scss
+++ b/assets/styles/common/_nathan-global.scss
@@ -2,7 +2,7 @@
 
 .uk-navbar-flip {
 	a {
-	color: $neutral-dark!important;
+	color: $text-darker!important;
 	}
 }
 
@@ -11,8 +11,8 @@
 	color: text-light!important;
 }
 
-.wrap .content .main {
-	padding-bottom: 3em;
+#menu-right-1 li {
+	@extend uk-width-1-3;
 }
 
 // HEADERS 
@@ -43,8 +43,10 @@ h4 a {
 	li a {
 		color: text-light;
 		padding: 3px 6px;
+		border-radius: $radius;
+		display: block;
 		&:hover {
-		@extend %blue-crush;
+		@include block-colours($blue-crush, $text-light);
 	}
 	}
 }
@@ -84,18 +86,19 @@ footer {
 .credits {
 	text-align: center;
 	display: block;
+	font-size: 80%;
 	a {
 	color:  text-light;
-}
+	}
 }
  
-.pagenav li {
+/*.pagenav li {
 	@extend %orange-crush;
 	// height:  %half-height;
 	&:hover {
 	@extend %grey-blanket;
 	}
-}
+}*/
 
 
 
