--- a/assets/styles/common/_variables.scss
+++ b/assets/styles/common/_variables.scss
@@ -358,23 +358,23 @@ $button-active-color:                            #444 !default;
 
 // PANELS
 
-$panel-title-margin-bottom:                      15px !default;
-$panel-title-font-size:                          18px !default;
-$panel-title-line-height:                        24px !default;
-$panel-title-font-weight:                        normal !default;
+// $panel-title-margin-bottom:                      15px !default;
+// $panel-title-font-size:                          18px !default;
+// $panel-title-line-height:                        24px !default;
+// $panel-title-font-weight:                        normal !default;
 $panel-title-color:                              $text-light;
 $panel-title-text-transform:                     uppercase;
 
-$panel-teaser-margin-bottom:                     $panel-title-margin-bottom !default;
+// $panel-teaser-margin-bottom:                     $panel-title-margin-bottom;
 
-$panel-box-padding:                              15px !default;
-$panel-box-background:                           #f5f5f5 !default;
-$panel-box-color:                                #444 !default;
+// $panel-box-padding:                              15px !default;
+// $panel-box-background:                           #f5f5f5 !default;
+$panel-box-color:                                $text-light;
 $panel-box-hover-color:                          $panel-box-color !default;
 $panel-box-title-color:                          #444 !default;
 $panel-box-badge-top:                            10px !default;
 $panel-box-badge-right:                          $panel-box-badge-top !default;
-$panel-box-teaser-margin:                        -$panel-box-padding !default;
+// $panel-box-teaser-margin:                        -$panel-box-padding !default;
 
 $panel-box-primary-background:                   $orange-crush;
 $panel-box-primary-color:                        $text-light;
@@ -406,8 +406,7 @@ $panel-divider-gutter-large:                     35px !default;
 $panel-divider-border:                           #ddd !default;
 $panel-divider-border-width:                     1px !default;
 
-$panel-body-padding:                             $panel-box-padding !default;
-$special: purple;
+// $panel-body-padding:                             $panel-box-padding !default;
 
 
 // ACCORDIONS & ASSORTED INSTRUMENTS
