--- a/assets/styles/common/_nathan-global.scss
+++ b/assets/styles/common/_nathan-global.scss
@@ -66,6 +66,7 @@ h4 a {
 
 footer {
 	@include footer-colours;
+	margin-top: 2em;
 	h3, a {
 		color: $text-light;
 	}
@@ -82,7 +83,6 @@ footer {
 }
 
 
-
 .credits {
 	text-align: center;
 	display: block;
@@ -92,14 +92,6 @@ footer {
 	}
 }
  
-/*.pagenav li {
-	@extend %orange-crush;
-	// height:  %half-height;
-	&:hover {
-	@extend %grey-blanket;
-	}
-}*/
-
 
 
 // TABS
