--- a/assets/styles/layouts/_pages.scss
+++ b/assets/styles/layouts/_pages.scss
@@ -1,10 +1,10 @@
 //Home page
 
-.home {
+/*.home {
 	.page-header{
 		@extend .uk-hidden;
 	}
 	#breadcrumbs {
 	@extend .visuallyhidden;
 	}
-}
+}*/
