--- a/assets/styles/common/_global.scss
+++ b/assets/styles/common/_global.scss
@@ -86,3 +86,13 @@ $icons: 'heart', 'calendar-plus-o', 'question-circle', 'meh-o';
 	list-style: none;
   padding-left: 15px;
 }
+.sidebar {
+	background: $blue-crush;
+	a {
+		color:$neutral-dark;
+		&:hover {
+			color: $primary-medium;
+		}
+	}
+}
+.staffnav .uk-grid {margin-top: 20px; margin-bottom: 40px;}
