ie 10/11 submenu texture fix

--- a/assets/styles/ie/_ie.scss
+++ b/assets/styles/ie/_ie.scss
@@ -4,6 +4,10 @@
         background-color: #ee6800;
         background-image:url(../images/textures/ie-diagonal-noise.png);
     }
+    .uk-panel-box-secondary {
+        background-color: #ee6800;
+        background-image:url(../images/textures/ie-diagonal-noise.png);
+    }
     .nav li, .pagenav li, footer {
         background-color: #ee6800;
         background-image:url(../images/textures/ie-diagonal-noise.png);
