--- a/assets/styles/components/_grid.scss
+++ b/assets/styles/components/_grid.scss
@@ -1,6 +1,6 @@
 // sidebar
 .wrap .content {
-	@extend .uk-grid;
+	//@extend .uk-grid;
 	//@extend .uk-grid-match;
 	@extend %borderbox;
 	& > * {@extend %borderbox;}
