--- a/assets/styles/ie/_ie.scss
+++ b/assets/styles/ie/_ie.scss
@@ -21,14 +21,14 @@
     }
 }
 
-#menu-partners h3 > a {
-    color: #545452;
-}
+// #menu-partners h3 > a {
+//     color: #545452;
+// }
 
-ul#menu-home-our-services.menu li > a {
-    color: #fff;
-}
+// ul#menu-home-our-services.menu li > a {
+//     color: #fff;
+// }
 
-ul#menu-home-blood-test li > a {
-    color: #fff;
-}
+// ul#menu-home-blood-test li > a {
+//     color: #fff;
+// }
