Tidy links, accordion and sub nav

--- a/assets/styles/common/_nathan-global.scss
+++ b/assets/styles/common/_nathan-global.scss
@@ -41,7 +41,7 @@ h4 a {
 		
 	}
 	li a {
-		color: text-light;
+		color: $text-light;
 		padding: 3px 6px;
 		border-radius: $radius;
 		display: block;
