--- a/assets/styles/common/_media-query.scss
+++ b/assets/styles/common/_media-query.scss
@@ -5,17 +5,31 @@
  
 	/* Custom, iPhone Retina */
 
- 	@media only screen and (min-width : 320px){ }
+ 	@media only screen and (min-width : 320px){ 
+ 	.mq-logo {
+ 		background: url(../images/sm-logo.png)no-repeat;
+ 	}
+ 	
+ 	}
  
 	/*  Small Devices, Phones */
-	@media only screen and (min-width : 480px){ }
+	@media only screen and (min-width : 480px){ 
+	
+	}
 
 	/* medium Devices, Tablets */
 	@media only screen and (min-width : 768px){
+	
+	
  	}
  	
 	/* large Devices, Desktops */
 	@media only screen and (min-width : 992px){ 
+	
+	#breadcrumbs {
+		margin: 12px;
+	}
+
 	}
  
 	/* XLarge Devices, Wide Screens */
@@ -23,3 +37,13 @@
 	
 
 	// }
+	
+	/* medium Devices, Tablets */
+	@media only screen and (max-width : 768px){
+	.banner .container:before {
+	    // content: url('../images/tpp-logo.png');
+	    display: none;
+		}
+	
+		}
+	
