menu headers etc

--- a/assets/styles/common/_media-query.scss
+++ b/assets/styles/common/_media-query.scss
@@ -12,7 +12,24 @@
 
 	/* medium Devices, Tablets */
 	@media only screen and (min-width : 768px){
- 	}
+		.pagenav {
+			i {font-size:3em;}
+			.uk-panel.uk-grid {
+				padding-top: 15px;
+				padding-bottom: 15px;
+			}
+	 	}
+
+		.alignleft {
+		    float: left;
+		    //margin-right: ($line-height-computed / 2);
+		  }
+		  .alignright {
+		    float: right;
+		    //margin-left: ($line-height-computed / 2);
+		  }
+
+	 }
  	
 	/* large Devices, Desktops */
 	@media only screen and (min-width : 992px){ 
