--- a/assets/styles/common/_nathan-global.scss
+++ b/assets/styles/common/_nathan-global.scss
@@ -72,7 +72,7 @@ footer {
 	}
 	.strapline {
 		text-align: center;
-		font-size: 1.8em;
+		font-size: 130%;
 		@include block-colours($dark-orange, $text-light);
 		}
 		
